# SibylSystem-Py

./: .gitignore  Git_Pull.bat  Git_Push.bat  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: pypi_release.yml
.github/wotkflows/: pypi_release.yml
SibylSystem/: __init__.py  exceptions.py
SibylSystem/types/: __init__.py  bans.py  error.py  general_info.py  permission.py  report.py  stats.py  token.py
src/SibylSystem/: __init__.py
src/SibylSystem/types/: token.py
src/sibylpy/: __init__.py  exceptions.py
src/sibylpy/types/: __init__.py  bans.py  result.py  token.py
tests/: myconfig.py  test_client.py
