[tool.poetry]
name = "SibylPy"
version = "0.1.0"
description = "Python Wrapper for the Sibyl System Antispam API for telegram"
authors = ["Sayan Biswas <sayan@pokurt.me>"]
packages = [
    { include = "src" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
