[tool.poetry]
name = "SibylPy"
version = "0.1.0"
description = "Python Wrapper for the Sibyl System Antispam API for telegram"
authors = ["Sayan Biswas <sayan@pokurt.me>", "Anonymous Indian <anonyindian1@gmail.com>"]
packages = [
    { include = "src" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.rst"
keywords = ["sibyl", "wrapper", "telegram", "antispam", "api"]
homepage = "https://github.com/Dank-del/SibylPy"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
