[tool.poetry]
name = "SibylSystem"
version = "0.0.15"
description = "Python Wrapper for the Sibyl System Antispam API for telegram"
authors = ["Sayan Biswas <sayan@pokurt.me>", "Anonymous Indian <anonyindian1@gmail.com>", "AliWoto <aminnimaj@gmail.com>"]
packages = [
    { include = "SibylSystem" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
readme = "README.md"
keywords = ["sibyl", "wrapper", "telegram", "antispam", "api"]
homepage = "https://github.com/AnimeKaizoku/SibylSystem-Py"

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.20.0"
pydantic = ">=1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
